--- a/index.html
+++ b/index.html
@@ -1,144 +1,247 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <title>Árvore de Decisão - Suporte Técnico</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #F5F5F5;
-      color: #333333;
       margin: 0;
       padding: 0;
+      background-color: #f8f9fa;
+      color: #333;
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: flex-start;
       min-height: 100vh;
+      background-image: url('sua-imagem-de-fundo.jpg'); /* Altere para o caminho da sua imagem */
+      background-size: cover;
+      background-position: center;
     }
 
     .container {
-      background-color: #FFFFFF;
+      max-width: 700px;
+      background: rgba(255, 255, 255, 0.8); /* Fundo translúcido para não perder legibilidade */
+      margin-top: 40px;
       padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      max-width: 600px;
-      width: 100%;
-      text-align: center;
+      border-radius: 8px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
     }
 
-    h2 {
-      color: #0057A0;
+    h1 {
+      text-align: center;
+      color: #0056b3;
+    }
+
+    .step {
+      display: none;
+      margin-bottom: 20px;
+    }
+
+    .step.active {
+      display: block;
     }
 
     button {
-      background-color: #0057A0;
-      color: #FFFFFF;
+      margin-top: 10px;
+      margin-right: 10px;
+      padding: 8px 16px;
+      background-color: #0056b3;
+      color: white;
       border: none;
-      padding: 10px 20px;
-      margin: 10px 5px 0 5px;
-      border-radius: 5px;
+      border-radius: 4px;
       cursor: pointer;
-      transition: background-color 0.3s;
     }
 
     button:hover {
-      background-color: #00AEEF;
+      background-color: #004494;
     }
 
-    #resultado {
+    #report {
+      white-space: pre-wrap;
+      background-color: #f1f1f1;
+      padding: 10px;
+      border: 1px solid #ccc;
       margin-top: 20px;
-      font-weight: bold;
-      color: #0057A0;
+    }
+
+    select, input[type="text"] {
+      padding: 8px;
+      width: 100%;
+      margin-top: 10px;
+      margin-bottom: 10px;
     }
   </style>
 </head>
 <body>
+
   <div class="container">
-    <h2>Árvore de Decisão - Suporte Técnico</h2>
-    <div id="perguntas"></div>
-    <button onclick="iniciar()">Iniciar Atendimento</button>
-    <p id="resultado"></p>
+    <h1>Árvore de Decisão - Suporte Técnico</h1>
+    <form id="decisionTreeForm">
+      <div class="step active" id="step1">
+        <p>Cliente reincidente em reclamar de sua conexão?</p>
+        <button type="button" onclick="recordAndGo('Sim', 'step1', 'n2')">Sim</button>
+        <button type="button" onclick="recordAndGo('Não', 'step1', 'step2')">Não</button>
+      </div>
+
+      <div class="step" id="step2">
+        <p>Sinal RX e TX entre -10 e -27 dentro do padrão?</p>
+        <button type="button" onclick="recordAndGo('Sim', 'step2', 'step3')">Sim</button>
+        <button type="button" onclick="recordAndGo('Não', 'step2', 'n2')">Não</button>
+      </div>
+
+      <div class="step" id="step3">
+        <p>Muitos logs de Desconexões?</p>
+        <button type="button" onclick="recordAndGo('Sim', 'step3', 'n2')">Sim</button>
+        <button type="button" onclick="recordAndGo('Não', 'step3', 'step4')">Não</button>
+      </div>
+
+      <div class="step" id="step4">
+        <p>Equipamento do cliente está na Anlix?</p>
+        <button type="button" onclick="recordAndGo('Sim', 'step4', 'step5')">Sim</button>
+        <button type="button" onclick="recordAndGo('Não', 'step4', 'step4b')">Não</button>
+      </div>
+
+      <div class="step" id="step4b">
+        <p>Selecione o equipamento:</p>
+        <select id="equipSelect" onchange="checkOther(this)">
+          <option value="">-- Escolha --</option>
+          <option>Nokia</option>
+          <option>TP-Link</option>
+          <option>D-Link</option>
+          <option>Mercusys</option>
+          <option>Outros</option>
+        </select>
+        <div id="otherDevice" style="display:none;">
+          <p>Informe o nome do equipamento:</p>
+          <input type="text" id="otherName" />
+        </div>
+        <button type="button" onclick="handleEquipamento()">Encaminhar ao N2</button>
+      </div>
+
+      <div class="step" id="step5">
+        <p>Como está a qualidade do wi-fi?</p>
+        <label><input type="radio" name="wifi" value="Boa"> Boa</label><br>
+        <label><input type="radio" name="wifi" value="Média"> Média</label><br>
+        <label><input type="radio" name="wifi" value="Ruim"> Ruim</label><br>
+        <button type="button" onclick="handleWiFi()">Próximo</button>
+      </div>
+
+      <div class="step" id="step6">
+        <p>Fez o teste de latência e perda e houve alguma falha?</p>
+        <button type="button" onclick="recordAndGo('Sim', 'step6', 'n2')">Sim</button>
+        <button type="button" onclick="recordAndGo('Não', 'step6', 'step7')">Não</button>
+      </div>
+
+      <div class="step" id="step7">
+        <p>Teste de velocidade próximo do contrato do cliente?</p>
+        <button type="button" onclick="recordAndGo('Sim', 'step7', 'final')">Sim</button>
+        <button type="button" onclick="recordAndGo('Não', 'step7', 'n2')">Não</button>
+      </div>
+
+      <div class="step" id="final">
+        <p><strong>Faça a abertura de protocolo aguardando análise e encaminhe ao N2.</strong></p>
+        <div id="report"></div>
+        <button type="button" onclick="baixarRelatorio()">Baixar Relatório</button>
+        <button type="button" onclick="restartTree()">Reiniciar Árvore</button>
+      </div>
+
+      <div class="step" id="n2">
+        <p><strong>Encaminhar ao N2.</strong></p>
+        <div id="report"></div>
+        <button type="button" onclick="baixarRelatorio()">Baixar Relatório</button>
+        <button type="button" onclick="restartTree()">Reiniciar Árvore</button>
+      </div>
+    </form>
   </div>
 
   <script>
-    const perguntas = [
-      { texto: "Cliente reincidente em reclamar de sua conexão?", tipo: "simnao", decisao: "sim" },
-      { texto: "Sinal RX e TX entre -10 e -27 dentro do padrão?", tipo: "simnao", decisao: "não" },
-      { texto: "Muitos logs de desconexões?", tipo: "simnao", decisao: "sim" },
-      { texto: "Equipamento do cliente está na Anlix?", tipo: "simnao", decisao: "não", equipamento: true },
-      { texto: "Como está a qualidade do Wi-Fi?", tipo: "opcoes", opcoes: ["boa", "media", "ruim"] },
-      { texto: "Fez o teste de latência e perda? Houve alguma falha?", tipo: "simnao", decisao: "sim" },
-      { texto: "Teste de velocidade próximo do contrato do cliente?", tipo: "simnao", decisao: "não" }
-    ];
+    const respostas = [];
 
-    let indice = 0;
-    let container = document.getElementById("perguntas");
-    let resultado = document.getElementById("resultado");
+    function showNextStep(stepId) {
+      document.querySelectorAll('.step').forEach(step => step.classList.remove('active'));
+      document.getElementById(stepId).classList.add('active');
 
-    function iniciar() {
-      indice = 0;
-      resultado.textContent = "";
-      container.innerHTML = "";
-      fazerPergunta();
-    }
-
-    function fazerPergunta() {
-      if (indice >= perguntas.length) {
-        resultado.textContent = "Faça a abertura de protocolo aguardando análise e encaminhando ao N2.";
-        return;
-      }
-
-      const p = perguntas[indice];
-      container.innerHTML = `<p>${p.texto}</p>`;
-
-      if (p.tipo === "simnao") {
-        container.innerHTML += `
-          <button onclick="responder('sim')">Sim</button>
-          <button onclick="responder('não')">Não</button>
-        `;
-      } else if (p.tipo === "opcoes") {
-        p.opcoes.forEach(op => {
-          container.innerHTML += `<button onclick="responder('${op}')">${op.charAt(0).toUpperCase() + op.slice(1)}</button>`;
-        });
+      if (stepId === 'n2' || stepId === 'final') {
+        gerarRelatorio();
       }
     }
 
-    function responder(resposta) {
-      const p = perguntas[indice];
-
-      if (p.decisao && resposta === p.decisao) {
-        resultado.textContent = "Encaminhar ao N2.";
-        container.innerHTML = "";
-        return;
-      }
-
-      // Se for a pergunta da Anlix e a resposta for "não", mostra os equipamentos e pausa
-      if (p.equipamento && resposta === "não") {
-        container.innerHTML = `<p>Qual é o equipamento?</p>`;
-        const equipamentos = ["Nokia", "Maxprint", "D-link", "TP-link", "Mercusys"];
-        equipamentos.forEach(eq => {
-          container.innerHTML += `<button onclick="responderEquipamento('${eq}')">${eq}</button>`;
-        });
-        return;
-      }
-
-      indice++;
-      fazerPergunta();
+    function recordAndGo(resposta, perguntaId, proximo) {
+      const perguntaTexto = document.querySelector(`#${perguntaId} p`).innerText;
+      respostas.push({ pergunta: perguntaTexto, resposta: resposta });
+      showNextStep(proximo);
     }
 
-    function responderEquipamento(nome) {
-      console.log("Equipamento selecionado:", nome);
+    function handleEquipamento() {
+      const select = document.getElementById("equipSelect");
+      let valor = select.value;
+      if (!valor) return alert("Selecione um equipamento.");
 
-      const equipamentosCriticos = ["Maxprint", "Mercusys"];
-      if (equipamentosCriticos.includes(nome)) {
-        resultado.textContent = `Equipamento ${nome} com histórico de problemas. Encaminhar ao N2.`;
-        container.innerHTML = "";
-        return;
+      if (valor === "Outros") {
+        const outro = document.getElementById("otherName").value.trim();
+        if (!outro) return alert("Informe o nome do equipamento.");
+        valor = "Outros: " + outro;
       }
 
-      indice++;
-      fazerPergunta();
+      respostas.push({
+        pergunta: "Equipamento informado:",
+        resposta: valor
+      });
+
+      showNextStep("n2");
+    }
+
+    function handleWiFi() {
+      const opcao = document.querySelector('input[name="wifi"]:checked');
+      if (!opcao) return alert("Selecione uma qualidade de Wi-Fi.");
+      respostas.push({
+        pergunta: "Qualidade do Wi-Fi:",
+        resposta: opcao.value
+      });
+      showNextStep('step6');
+    }
+
+    function checkOther(select) {
+      const other = document.getElementById("otherDevice");
+      other.style.display = (select.value === "Outros") ? "block" : "none";
+    }
+
+    function gerarRelatorio() {
+      const area = document.getElementById("report");
+      let texto = "📋 Relatório de Atendimento\n\n";
+      respostas.forEach((item, i) => {
+        texto += `${i + 1}. ${item.pergunta}\n   → ${item.resposta}\n`;
+      });
+      area.textContent = texto;
+    }
+
+    function baixarRelatorio() {
+      let texto = "Relatório de Atendimento\n\n";
+      respostas.forEach((item, i) => {
+        texto += `${i + 1}. ${item.pergunta}\n   → ${item.resposta}\n`;
+      });
+
+      const blob = new Blob([texto], { type: 'text/plain;charset=utf-8' });
+      const url = URL.createObjectURL(blob);
+      const link = document.createElement("a");
+      link.href = url;
+      link.download = "relatorio_atendimento.txt";
+      document.body.appendChild(link);
+      link.click();
+      document.body.removeChild(link);
+      URL.revokeObjectURL(url);
+    }
+
+    function restartTree() {
+      respostas.length = 0;
+      document.getElementById("decisionTreeForm").reset();
+      document.querySelectorAll('.step').forEach(step => step.classList.remove('active'));
+      document.getElementById("step1").classList.add('active');
+      document.getElementById("otherDevice").style.display = "none";
+      document.getElementById("report").textContent = "";
     }
   </script>
+
 </body>
 </html>
